tests/parser/fail/self-class-param-kw.som
"test:
failMessage:
  - contains: define
  - contains: self
"

SelfClassParamKw = (
  ----

  test: self makes: errors = ('yes')
)
